# weather-dashboard

./: .coverage  .dockerignore  .env.example  .gitignore  .mise.toml  .pre-commit-config.yaml  DOCKER.md  Dockerfile  README.md  TESTING.md  code-review.md  docker-compose.dev.yml  docker-compose.yml  feature-updates.md  fly.toml  main.py  main.py.bak  pyproject.toml  run_tests.py  test_components.html  weather_providers.py
.github/: DEPLOYMENT_SETUP.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/codeql/: codeql-config.yml
.github/scripts/: setup-deployment.sh
.github/workflows/: dependabot-auto.yml  deploy.yml  docker.yml  fly-deploy-prod.yml  fly-pr-preview.yml  lint.yml  security.yml  status.yml  test.yml
rust-backend/: .env.example  COMPARISON.md  Cargo.toml  Dockerfile  Makefile  README.md
rust-backend/src/: cache.rs  config.rs  main.rs  templates.rs  weather.rs
rust-backend/templates/: weather.html
static/: manifest.json  sw.js
static/css/: weather-components.css
static/icons/tests/: report.html
static/js/: realtime-weather.js  weather-components.js
templates/: weather.html
tests/: conftest.py  report.html  test_frontend.py
tests/integration/: test_api_integration.py
tests/unit/: test_air_quality_provider.py  test_clothing_provider.py  test_lunar_provider.py  test_main.py  test_nws_provider.py  test_pressure_trends.py  test_radar_provider.py  test_solar_provider.py  test_temperature_trends.py  test_weather_providers.py  test_websocket.py
